# cerbos-sdk-rust

./: .gitattributes  Cargo.toml  README.md  RELEASE.md  build.rs  release.sh  test.sh
.github/: renovate.json
.github/actions/setup-protoc/: action.yaml
.github/workflows/: pr.yaml  release.yaml  zizmor.yaml
hack/dev/: get-token.sh  list-files.sh
if-struct-macro/: Cargo.toml
if-struct-macro/src/: lib.rs
proto/: buf.yaml  download-protos.sh
proto/defs/buf/validate/: validate.proto
src/: lib.rs
src/genpb/: buf.validate.r#priv.rs  buf.validate.rs  cerbos.audit.v1.rs  cerbos.cloud.apikey.v1.rs  cerbos.cloud.store.v1.rs  cerbos.effect.v1.rs  cerbos.engine.v1.rs  cerbos.policy.v1.rs  cerbos.request.v1.rs  cerbos.response.v1.rs  cerbos.schema.v1.rs  cerbos.svc.v1.rs  google.api.expr.v1alpha1.rs  google.api.rs  google.protobuf.rs  grpc.gateway.protoc_gen_openapiv2.options.rs  validate.rs
src/sdk/: attr.rs  auth.rs  auth_client.rs  container.rs  hub.rs  mod.rs  model.rs  store.rs
src/sdk/admin/: mod.rs  model.rs  policy_set.rs
src/sdk/container/: certs.rs  mod.rs
src/sdk/deser/: mod.rs  value.rs
src/sdk/hub/: auth.rs  auth_client.rs  rpc_error.rs  store.rs  utils.rs
tests/: sdk_admin_test.rs  sdk_test.rs  store_integration_test.rs
tests/testdata/configs/: tcp_with_tls.yaml
tests/testdata/policies/principal_policies/: policy_05.yaml
