[package]
name = "if-struct-macro"
version = "0.1.0"
edition = "2024"
description = "Macro that conditionally applies `serde(default)` only to structs when the `serde` feature is enabled"
license = "Apache-2.0"
authors = ["Cerbos Developers <sdk+rust@cerbos.dev>"]
repository = "https://github.com/cerbos/cerbos-sdk-rust"
homepage = "https://cerbos.dev"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
